[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "pystrel"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Andrzej Więckowski", email = "andywiecko@gmail.com" }
]
description = "Package for exact calculations strongly correleted electrons."
keywords = [ "spinless fermions", ] 
dynamic = ["version"]

dependencies = [
    "numpy >= 1.24.0",
    "scipy >= 1.10.1",
]

[project.optional-dependencies]
dev = [
    "mypy >= 1.3.0",
    "pylint >= 2.17.4",
    "pylint-per-file-ignores >= 1.2.0",
    "pytest >= 7.3.1",
    "pdoc >= 13.1.1",
    "ipykernel >= 6.23.2",
    "black >= 23.3.0",
]

[project.urls]
Documentation = "https://andywiecko.github.io/pystrel"
Repository = "https://github.com/andywiecko/pystrel.git"

[tool.pylint.MASTER]
load-plugins=[
    "pylint_per_file_ignores",
]

[tool.pylint.'messages control']
variable-rgx = "^[a-zA-Z]$|^[a-zA-Z_][a-zA-Z0-9_]{0,30}$"
argument-rgx = "^[a-zA-Z]$|^[a-zA-Z_][a-zA-Z0-9_]{0,30}$"

[tool.pylint-per-file-ignores]
"tests/"="missing-function-docstring,missing-module-docstring"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
]
files=[
    "pystrel",
    "tests/*.py",
]
